# ntcp2-handshake

./: Cargo.toml  README.md  ire.patch
src/: crypto.rs  lib.rs  ntcp2.rs  session_request.rs  test.rs
src/noise/: cipher_state.rs  handshake_state.rs  mod.rs  noise.rs  suite.rs  symmetric_state.rs
src/ntcp2/: data.rs  mod.rs  session_confirmed.rs  session_created.rs  session_request.rs
