[package]
name = "ntcp2-hs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"

sha2 = "0.10.7"
digest = "0.10.7"

chacha20poly1305 = "0.10.1"
aead = "0.5.2"

i2p = "0.0.1"
i2p_snow = "0.5.1"
rand = "0.5"
rand_core = "0.5.1"

siphasher = "0.3.10"
x25519-dalek = "2.0.0"
aes = "0.8.3"
