[package]
name = "ntcp2-hs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"

# Hash functions
sha2 = "0.10.7"
digest = "0.10.7"
hmac = "0.12.1"

# Diffie-Hellman
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

# Obfuscation
aes = "0.8.3"
cbc = "0.1.2"
rust-crypto = "0.2.36"

chacha20poly1305 = "0.10.1"
aead = "0.5.2"

i2p = "0.0.1"
i2p_snow = "0.5.1"
rand = "0.6.4"
rand_core = "0.6.4"

siphasher = "0.3.10"

clap = { version = "4.3.21", features = ["derive", "cargo"] }
hex = "0.4.3"
